--- a/index.html
+++ b/index.html
@@ -1,75 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset='utf-8'>
-
-  <title>shaundunne/Boilerplates @ GitHub</title>
-
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #f7d275;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #082d8a; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #082d8a; }
-    h3 { text-align: center; color: #082d8a; }
-    a { color: #082d8a; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
+  <meta charset="utf-8">
+  <title>Boilerplate Me</title>
+  <meta name="viewport" content="width=device-width; initial-scale=0.45">
+  <link href='http://fonts.googleapis.com/css?family=Holtwood+One+SC' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Six+Caps' rel='stylesheet' type='text/css'>
+  <link href="style.css" rel="stylesheet">
 </head>
-
 <body>
-  <a href="http://github.com/shaundunne/Boilerplates"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
-  <div id="container">
-
-    <div class="download">
-      <a href="http://github.com/shaundunne/Boilerplates/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/shaundunne/Boilerplates/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="http://github.com/shaundunne/Boilerplates">Boilerplates</a>
-      <span class="small">by <a href="http://github.com/shaundunne">shaundunne</a></span></h1>
-
-    <div class="description">
-      
-    </div>
-
-    <h2>Contact</h2>
-<p>Shaun (thedarkpoet@gmail.com)<br/>      </p>
+<header>
+	<h1>Boilerplates</h1>
+</header>
 
 
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/shaundunne/Boilerplates/zipball/master">zip</a> or
-      <a href="http://github.com/shaundunne/Boilerplates/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/shaundunne/Boilerplates</pre>
-    </p>
+<ul id="boilerplates">
+</ul>
 
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/shaundunne/Boilerplates">shaundunne/Boilerplates</a>
-    </div>
 
-  </div>
 
-  
+<footer>
+
+</footer>
+
+<script id="bPlateTmp" type="text/html">
+<li>
+	<h2>${name}</h2>
+	<p>${description}</p>
+	<p><a href="${url}">Website</a></p>
+	<p>
+		<a class="source" href="${source}">download source</a>
+	</p>
+</li>
+</script>
+
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>	
+<script src="data.js"></script>
+
+<script type="text/javascript">
+	$("#bPlateTmp").tmpl(boilerplates).appendTo("#boilerplates");
+</script>
+
+<script type="text/javascript">
+	$("#boilerplates").delegate('li','click', function(){
+		if($(this).height() === 60)
+		{
+			$(this).animate({
+				height : 155
+			})
+		} else 
+		{
+			$(this).animate({
+				height : 60
+			})
+		}
+		
+	});
+	
+	$("#boilerplates").delegate('a','click', function(e){
+			e.stopPropogation();
+	});
+</script>
+
 </body>
 </html>
