--- a/index.html
+++ b/index.html
@@ -13,19 +13,43 @@
 	<img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" />
 </a>
 
-<header>
-	<h1>Boilerplates</h1>
-</header>
+	<header>
+		<h1>Boilerplates</h1>
+	</header>
+	
+	<div id="container">
+		<div class="innerContainer">
+			<div id="info">
+				<p>I built this for two reasons.</p>
+				<ol>
+					<li>I wanted to start using Github and need a something to host.</li>
+					<li>I wanted a reason to use jQuery Templates, because I think they're cool.</li>
+				</ol>
+				<p>If you have a boilerplate to add to the list, <a href="http://github.com/shaundunne/Boilerplates">fork it</a> - add it - submit a pull req.</p>
+			</div>
+			
+			<div class="download">
+			  <a href="http://github.com/shaundunne/Boilerplates/zipball/master">
+			    <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
+			  <a href="http://github.com/shaundunne/Boilerplates/tarball/master">
+			    <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+			</div>
+		
+		</div>
+		
+		<ul id="boilerplates">
+		</ul>
+		
+		<p>You can also clone the project with <a href="http://git-scm.com">Git</a>
+		  by running:
+		  <pre>$ git clone git://github.com/shaundunne/Boilerplates</pre>
+		</p>
+		
+	</div>
 
-
-<ul id="boilerplates">
-</ul>
-
-
-
-<footer>
-
-</footer>
+<div class="footer">
+  get the source code on GitHub : <a href="http://github.com/shaundunne/Boilerplates">shaundunne/Boilerplates</a>
+</div>
 
 <script id="bPlateTmp" type="text/html">
 <li>
