--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 			</div>
 			
 			<div class="download">
-			  <a href="http://github.com/shaundunne/Boilerplates/zipball/master">
+			  <a href="https://github.com/shaundunne/Boilerplates/zipball/master">
 			    <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-			  <a href="http://github.com/shaundunne/Boilerplates/tarball/master">
+			  <a href="https://github.com/shaundunne/Boilerplates/tarball/gh-pages">
 			    <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
 			</div>
 		
